--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,23 @@
 {
   "name": "이풋볼 스탯 시뮬레이터",
   "short_name": "Stat SIM",
-  "start_url": "/index.html",
+  "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#000000",
   "icons": [
     {
-      "src": "https://jebi72.github.io/efootball-stats-simulator/icons/stat_sim_192px.png",
+      "src": "icons/stat_sim_192px.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "https://jebi72.github.io/efootball-stats-simulator/icons/stat_sim_512px.png",
+      "src": "icons/stat_sim_512px.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
     }
   ]
+
 }
